fixed overflow

--- a/style.css
+++ b/style.css
@@ -172,7 +172,6 @@ body {
     padding-right: 1%;
     padding-left: 1%;
     height: 70%;
-    overflow-y: auto;
     border-radius: 5%;
     margin-top: 5%;
     width: 25%;
@@ -637,7 +636,6 @@ td {
         position: absolute;
         z-index: 3;
         height: 110%;
-        overflow-y: auto;
         border-radius: 0;
         margin-top: -1%;
         width: 98%;
